[package]
name = "bcts"
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
rmx.workspace = true
salsa.workspace = true
serde.workspace = true
memchr.workspace = true
enum-iterator.workspace = true
